--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
         run: cd gas-dist && clasp push
 
       - name: Create new version
-        run: cd gas-dist && clasp create-version
+        run: cd gas-dist && clasp version "Automated deployment from GitHub Actions"
