--- a/.github/workflows/deploy-gas.yml
+++ b/.github/workflows/deploy-gas.yml
@@ -51,13 +51,8 @@ jobs:
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       run: |
         cd gas-dist
-        clasp deploy --description "Automated deployment from GitHub Actions - ${{ github.sha }}"
+        clasp create-version --description "Automated deployment from GitHub Actions - ${{ github.sha }}"
       env:
         CLASP_CREDENTIALS: ${{ secrets.CLASP_CREDENTIALS }}
 
-    - name: Get deployment URL
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-      run: |
-        cd gas-dist
-        echo "Deployment completed. Check your Apps Script project for the latest deployment."
-        clasp versions
+
