--- a/.github/workflows/deploy-gas.yml
+++ b/.github/workflows/deploy-gas.yml
@@ -15,16 +15,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
-
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
       with:
         version: 8
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'pnpm'
 
     - name: Install dependencies
       run: pnpm install
@@ -33,7 +33,7 @@ jobs:
       run: pnpm run build:gas
 
     - name: Install clasp globally
-      run: npm install -g @google/clasp
+      run: pnpm add -g @google/clasp
 
     - name: Create clasp credentials
       run: |
@@ -54,5 +54,3 @@ jobs:
         clasp create-version --description "Automated deployment from GitHub Actions - ${{ github.sha }}"
       env:
         CLASP_CREDENTIALS: ${{ secrets.CLASP_CREDENTIALS }}
-
-
