--- a/.github/workflows/deploy-gas-advanced.yml
+++ b/.github/workflows/deploy-gas-advanced.yml
@@ -19,6 +19,7 @@ on:
 
 env:
   NODE_VERSION: '18'
+  PNPM_VERSION: '10.11.0'
 
 jobs:
   lint-and-test:
@@ -31,6 +32,8 @@ jobs:
 
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
+      with:
+        version: ${{ env.PNPM_VERSION }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -72,6 +75,8 @@ jobs:
 
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
+      with:
+        version: ${{ env.PNPM_VERSION }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
