--- a/.github/workflows/deploy-gas-app.yml
+++ b/.github/workflows/deploy-gas-app.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Login to clasp
         run: echo "$CLASPRC" > ~/.clasprc.json
         env:
-          CLASPRC: ${{ secrets.CLASPRC }}
+          CLASPRC: ${{ secrets.CLASP_RC_JSON }}
 
       - name: Verify credentials file integrity
         env:
